# algophilia

./: .gitignore  main.py  pyproject.toml
app/assets/templates/: accessories.yaml  armors.yaml  feats.yaml  items.yaml  knowledges.yaml  origins.yaml  schema.sql  souls.yaml  spells.yaml  static_condition.yaml  static_origin.yaml  static_skill.yaml  static_soul.yaml  static_stat.yaml  static_weapon_tag.yaml  weapons.yaml
app/config/: __init__.py  container.py  logger.py  panic.py  settings.py
app/core/: environment.py  exception.py  result.py
app/data/: __init__.py  database.py  repository.py  seed.py  seeder.py
app/domain/data/: connection.py  database.py  executor.py  seeder.py
app/domain/models/: base.py  character.py
app/domain/models/static/: __init__.py  condition.py  item.py  knowledge.py  origin.py  skill.py  soul.py  stat.py  weapon_tag.py
app/events/: __init__.py  logger.py  telegram.py  worker.py
app/middleware/: __init__.py  exception.py  result.py
app/models/: __init__.py  base.py  character.py  log.py
app/services/: registry.py
app/utils/: __init__.py  directory.py  environment.py  exception.py
app/view/: app.py  fallback.py
app/view/components/common/: __init__.py  card.py  divider.py  fonts.py  icon.py  iconBtn.py  label.py  stripe.py  title.py
app/view/components/ui/fallback/: __init__.py  content.py  fallback_content.py  fallback_page.py
app/view/components/ui/toast/: __init__.py  toast.py  toast_card.py  toast_classes.py  (+1 more)
app/view/style/: __init__.py  settings.py
assets/templates/: static_item.yaml  static_knowledge.yaml
